enovy/three-tier-deploy/mysql/05-service-write.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-write
  namespace: db
spec:
  type: ClusterIP
  selector:
    app: mysql
    statefulset.kubernetes.io/pod-name: mysql-0
  ports:
    - port: 3306
      targetPort: 3306
